--- a/css/style.css
+++ b/css/style.css
@@ -40,14 +40,14 @@
 		-o-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-		color: #e0555a;
+		color: #545454;
 		text-decoration: none;
 		border-bottom: dotted 1px;
 	}
 
 		a:hover {
 			text-decoration: none;
-			color: #e0555a !important;
+			color: #545454 !important;
 			border-bottom-color: transparent;
 		}
 
@@ -260,8 +260,8 @@
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #e0555a;
-			box-shadow: 0 0 0 1px #e0555a;
+			border-color: #545454;
+			box-shadow: 0 0 0 1px #545454;
 		}
 
 	.select-wrapper {
@@ -372,8 +372,8 @@
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #e0555a;
-			box-shadow: 0 0 0 1px #e0555a;
+			border-color: #545454;
+			box-shadow: 0 0 0 1px #545454;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -855,7 +855,7 @@
 		input[type="reset"].special,
 		input[type="button"].special,
 		.button.special {
-			background-color: #e0555a;
+			background-color: #545454;
 			color: #ffffff !important;
 		}
 
@@ -908,7 +908,7 @@
 		.feature:before {
 			border-radius: 0.5em;
 			border: solid 1px rgba(144, 144, 144, 0.25);
-			color: #e0555a;
+			color: #545454;
 			display: inline-block;
 			font-size: 2.25em;
 			height: 2em;
@@ -1017,7 +1017,7 @@
 		}
 
 		.wrapper.style3 {
-			background: #e0555a;
+			background: #545454;
 			color: #d1f2f5;
 		}
 
@@ -1206,7 +1206,7 @@
 			}
 
 			.dropotron li.active > a, .dropotron li:hover > a {
-				background: #e0555a;
+				background: #545454;
 				color: #ffffff !important;
 			}
 
